[package]
name = "lampo-vls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.0"
anyhow = "1.0.70"
lightning = "0.0.123"
log = "0.4.21"
url = "2.5.0"
triggered = "0.1.2"
async-trait = "0.1"


[dependencies.vls-core]
features = ["std"]
version = "0.11.0"
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"

[dependencies.vls-persist]
features = ["redb-kvv"]
version = "0.11.0"
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"

[dependencies.vls-proxy]
version = "0.11.0"
time = "0.3.17"
git = "https://gitlab.com/lightning-signer/validating-lightning-signer.git"

